--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node src/server.js"
+        "start": "nodemon src/server.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
         "body-parser": "^1.19.0",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "mongoose": "^4.13.17",
-        "dotenv": "^8.2.0"
+        "nodemon": "^2.0.15"
     }
 }
